# titanic-with-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  devbox.json
src/: create_submission.rs  feature_engineering.rs  inference.rs  main.rs  training.rs
