[package]
name = "titanic-with-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
csv = "1.3.1"
itertools = "0.13.0"
lgbm = "0.0.5"
polars = { version = "0.44.2", features = ["serde", "lazy", "replace"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.215", features = ["derive"] }
